<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:padding="20dp">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/title"
        android:layout_marginTop="0dp"
        android:text="@string/app_name"
        android:textSize="32sp"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/HRegBT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="252dp"
        android:text="@string/reg_user"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/HContacts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="310dp"
        android:text="@string/contacts"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/send_SOS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="370dp"
        android:text="Send SOS" />
</RelativeLayout>