<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:text="Register User Details"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28sp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="-16dp">

        <TextView
            android:id="@+id/reg_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/View_name"
            android:textSize="28sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.076"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="153dp" />

        <EditText
            android:id="@+id/reg_ed_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="Enter your name"
            android:textSize="22sp"
            android:inputType="textCapSentences|textAutoCorrect"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.576"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="153dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28sp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintVertical_bias="0.121"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:id="@+id/reg_bloodgp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/View_bgp"
            android:textSize="28sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.076"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="153dp" />

        <Spinner
            android:id="@+id/reg_ed_bloodgp"
            android:layout_width="83dp"
            android:layout_height="48dp"
            android:hint="Enter your Blood Group"
            android:spinnerMode="dropdown"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.576"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="153dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28sp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintVertical_bias="0.245"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:id="@+id/reg_phn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/View_phn"
            android:textSize="28sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.076"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="153dp" />

        <EditText
            android:id="@+id/reg_ed_phn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="Enter your Number"
            android:textSize="22sp"
            android:inputType="phone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.576"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="153dp" />
    </LinearLayout>

    <Button
        android:id="@+id/reg_registerbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="324dp"
        android:text="Register User"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>