<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:text="View User Details"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="-16dp">

        <TextView
            android:id="@+id/vw_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/View_name"
            android:textSize="28sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.076"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="153dp" />

        <TextView
            android:id="@+id/vw_ed_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="Enter your name"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.576"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="153dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintVertical_bias="0.121"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:id="@+id/vw_bloodgp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/View_bgp"
            android:textSize="28sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.076"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="153dp" />

        <TextView
            android:id="@+id/vw_ed_bloodgp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="Enter your Blood Group"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.576"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="153dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintVertical_bias="0.245"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:id="@+id/vw_phn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/View_phn"
            android:textSize="28sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.076"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="153dp" />

        <TextView
            android:id="@+id/vw_ed_phn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="Enter your Number"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.576"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="153dp" />
    </LinearLayout>

    <Button
        android:id="@+id/vw_registerbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="324dp"
        android:text="Edit User Details"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/vw_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="260dp"
        android:text="Home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>